# flight-delay-payout

./: NEWS_ReadMe.txt  pyproject.toml  requirements.txt
1_HABIB/: README.md
1_HABIB/.github/workflows/: ci.yml
1_HABIB/notebooks/: 99_final_pipeline.ipynb
1_HABIB/reports/: final_report.md
notebooks/: 06_eu_transfer_validation.ipynb  99_final_pipeline.executed.ipynb
reports/: eu_data_analysis.md  eurocontrol_summary.json  eurocontrol_summary.txt  poster_outline.md  slides_outline.md
scripts/: analyse_eurocontrol.py  process_eurocontrol.py
src/: __init__.py  config.py
src/data/: eurocontrol.py
src/pipeline/: __init__.py  build.py  splits.py
tests/: test_eurocontrol.py  test_pipeline.py
